--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -331,7 +337,11 @@
 			<artifactId>web-api</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-
+			<dependency>
+			<groupId>com.github.sealedtx</groupId>
+			<artifactId>java-youtube-downloader</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
