--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,12 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.12.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.github.ren130302</groupId>
+			<artifactId>web-api</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
