--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,14 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.12.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+   		 <groupId>org.mybatis</groupId>
+    		 <artifactId>mybatis</artifactId>
+    		 <version>3.5.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
